Temp fix for horizontal scroll bar issue

--- a/bigscreen.css
+++ b/bigscreen.css
@@ -12,6 +12,7 @@ body {
   -moz-user-select: none;
   -khtml-user-select: none;
   user-select: none;
+  overflow-x: hidden;
 }
 
 #name {
